name:                sch
version:             0.1.0.0
synopsis:            A CLI client of Google Calendar
description:         Please see README.md
homepage:            https://github.com/ishiy1993/sch#readme
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           Copyright: (c) 2016 ishiy
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Handlers
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , lens
                     , lens-aeson
                     , req
                     , text
                     , time
                     , unordered-containers
  default-language:    Haskell2010

executable sch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , directory
                     , filepath
                     , google-oauth2-for-cli
                     , optparse-applicative
                     , sch
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sch
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ishiy1993/sch
